--- a/Source/Config/DefaultEngine.ini
+++ b/Source/Config/DefaultEngine.ini
@@ -9,12 +9,14 @@ r.SceneRenderTargetResizeMethod=2
 r.CustomDepthTemporalAAJitter=False
 r.CustomDepth=0
 
-[/Script/LinuxTargetPlatform.LinuxTargetSettings]
 ; [NVIDIA]
 ; Using VULKAN RHI cause the Depth and ClassSegmentation feature extractor to be black
 ; We should just use OpenGL 4.30 for now
--TargetedRHIs=SF_VULKAN_SM5
-+TargetedRHIs=GLSL_430
+; fehim's note: ue5 not support OpenGL on linux anymore, so we have to use VULKAN
+
+[/Script/LinuxTargetPlatform.LinuxTargetSettings]
+ClearTargetedRHIs=True
++TargetedRHIs=SF_VULKAN_SM5
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Map/TestCapturer.TestCapturer
@@ -83,4 +85,17 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=DCDDA03E54FB44BE9C6CB1AA52431921
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
 
