pictures all dark

--- a/Source/Config/DefaultEngine.ini
+++ b/Source/Config/DefaultEngine.ini
@@ -5,9 +5,13 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.RendererSettings]
-r.SceneRenderTargetResizeMethod=2
-r.CustomDepthTemporalAAJitter=False
-r.CustomDepth=0
+DefaultGraphicsRHI=DefaultGraphicsRHI_Vulkan
+r.DefaultFeature.AutoExposure=False
+r.SceneCapture.ForceLinearGamma=1
+r.Lumen.Enable=0
+r.RayTracing=0
+r.GenerateMeshDistanceFields=0
+r.AllowStaticLighting=False
 
 ; [NVIDIA]
 ; Using VULKAN RHI cause the Depth and ClassSegmentation feature extractor to be black
@@ -26,6 +30,7 @@ GameDefaultMap=/Game/Map/TestCapturer.TestCapturer
 +ActiveClassRedirects=(OldClassName="NVSceneFeatureExtractor_ObjectSegmentation",NewClassName="NVSceneFeatureExtractor_VertexColorMask")
 +ActiveClassRedirects=(OldClassName="NVSceneFeatureExtractor_ImageExport",NewClassName="NVSceneFeatureExtractor_PixelData")
 +ActiveClassRedirects=(OldClassName="NVSceneFeatureExtractor_DataExport",NewClassName="NVSceneFeatureExtractor_AnnotationData")
+
 
 [/Script/RenderDocPlugin.RenderDocPluginSettings]
 renderdoc.CaptureAllActivity=False
